Release 0.7 (in development)
-------------
* Added support to python 3.9
* Added support to django 3.2


Release 0.6.1
-------------
* Add __isnotnull filter option


Release 0.6
-----------
* Added support for DRF 3.11, dropped support for older versions


Release 0.5
-------------
* Added support to python 3.8
* Removed support to python 3.6
* Added support to django 2.2
* Added support to django 3.0 and 3.1
* Removed support to django 2.1
* Fixed NestedComplexRouter parent lookup


Release 0.4
-------------
* Added FunctionRelatedField


Release 0.3.8
-------------
* QueryStringFilterMixin allow to filter on multiple fields


Release 0.3.7
-------------
* Reverse basename change


Release 0.3.6
-------------
* Clean up deprecated warnings on base_name
* Allow filtering on boolean to allow "true" and "false"


Release 0.3.5
-------------
* tweaked to QueryStringFilterMixin


Release 0.3.4
-------------
* changed to QueryStringFilterMixin


Release 0.3
-----------
* added IsSuperUser permission
* added QueryStringFilterAPIView


Release 0.2
-----------
* added ModelChoiceField


Release 0.1
-----------
* Initial release