@@ -5,7 +5,6 @@ django_find_project = false
 DJANGO_SETTINGS_MODULE=demo.settings
 ;log_format = %(asctime)s %(levelname)s %(message)s
 ;log_date_format = %Y-%m-%d %H:%M:%S
-log_print = False
 log_level = ERROR
 
 addopts =
@@ -26,7 +25,3 @@ addopts =
 python_files=tests/test_*.py
 ; disable all classname-based discovery and relying on subclass
 python_classes=
-pep8ignore = * ALL
-isort_ignore =
-    docs/conf.py
-    *migrations/*.py
